--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -56,7 +56,9 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 
 #### From the web UI
 
-Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_worker.img.zip) instead. **Note**: Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
+Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_worker.img.zip) instead. 
+
+**Note**: Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
 
 After you have an installed the image, connected the new Pioreactor to your cluster is simple. On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
