--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -1,10 +1,9 @@
 ---
+title: Common questions
 slug: /common-questions
 ---
 
 import TOCInline from '@theme/TOCInline';
-
-# Common questions
 
 <TOCInline toc={toc} />
 
