new experiment, export data, new images

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -42,7 +42,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
     2. Check "Enable SSH".
     3. Add username: `pioreactor` and password: `raspberry` (you can change the password later)
     4. Check "Configure wireless LAN" and enter your network name into SSID, wifi password, and country. (Alternative: instead of trying to use a "restrictive" network, like at a university that may not allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)).
-    5. _(Optional)_ Change timezone to your local timezone.
+    5. Change timezone to your local timezone.
     6. Click "Save"
 
 6.  Click "Write".
