--- a/user-guide/03-Extending your Pioreactor/06-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06-using-community-plugins.mdx
@@ -35,4 +35,4 @@ Managing on/off and settings are done just like any other job, in the Manage mod
 
 ## Alternative: putting Python files in the the `plugins` folder
 
-An alternative way to install a plugin is to place a Python file in the `/home/pi/.pioreactor/plugins` directory on the Raspberry Pi. This is good for one-off scripts or plugins you are demoing or testing.
+An alternative way to install a plugin is to place a Python file in the `/home/pioreactor/.pioreactor/plugins` directory on the Raspberry Pi. This is good for one-off scripts or plugins you are demoing or testing.
