OD, normalization, gr

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -49,7 +49,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 7.  Once writing is complete complete, remove the microSD card, and place it into the Raspberry Pi.
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up.
 9.  After a few moments, your Pioreactor will briefly flash a blue LED, signifying it is ready. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
-10. The Pioreactor is now ready for use! Experiment preparation instructions can be found [here](/user-guide/prepare-vial-for-cultures). 
+10. The Pioreactor is now ready for use! Basic experiment instructions can be found [here](/user-guide/prepare-vial-for-cultures). 
 
 
 ## Adding workers to your cluster
