temperature edits, new pictures

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -16,7 +16,7 @@ There may be a problem. You can diagnose the problem by [counting the number of 
 
 #### What does the onboard button do?
 
-The button on the Pioreactor HAT It sends a signal to the web UI to display a "hello" message. This is useful to know which Pioreactor in a cluster you are interacting with.
+The button on the Pioreactor HAT sends a signal to the web UI to display a "hello" message. This is useful to know which Pioreactor in a cluster you are interacting with.
 
 
 Optical density and LEDs
