--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -68,10 +68,12 @@ Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair
 
 #### How can I improve mixing and aeration?
 
-If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, in increasing order of complication:
+If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, (in increasing order of complication, not necessarily effectiveness):
 
+0. If the tubes in the cap are submerged during operation, this is reduce the transfer of air. Pull them up from the top of the cap to keep them out of the liquid.
+1. Leave the cap slightly ajar.
 1. Increase the RPM of the stirring. This will increase the surface area exposed to the air. Be warned though: too high of an RPM will cause either a large enough vortex to interfere with the optical systems, or will causing the stir bar to fall out of sync.
-2. Add a baffle to the vial cap. A simple cylinder that sticks into the liquid causes enough disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
+2. Add a baffle to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
 3. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
 
 
