new assembly tools images, some updaes

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -1,13 +1,13 @@
 ---
 description: Install the Pioreactor software onto the Raspberry Pi
-title: Raspberry Pi set up and software installation
+title: Software installation
 slug: /software-set-up
 ---
 
 import TOCInline from '@theme/TOCInline';
 
 
-### Let's install your new Pioreactor
+### Let's install your Pioreactor's software
 
 You can expect the setup process to take 10-15 minutes.
 
