--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -55,7 +55,7 @@ If you find that the Pioreactor's heating is shutting off, typically with an acc
 
 To avoid this occurring, we suggest not setting the target temperature too high - not more than 20℃ above ambient temperature. Also, reducing the `Kd` parameter in `[temperature_automation.stable]` section in the config.ini would help.
 
-#### How does heating work on the Pioreactor
+#### How does heating work on the Pioreactor?
 
 The Pioreactor has an onboard PCB, called the heating PCB, that sits below the glass vial. On the PCB are resistors that convert current from PWM outputs into heat. By varying the duty cycle of the PWM, we vary the amount of heat converted.
 
