local access point correction; new images

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -18,7 +18,7 @@ Before you get started, you'll need to have the following:
 
 1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
 2.  A blank microSD card, ideally 16GB size or larger.
-3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2A).
+3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2.25A).
 4.  A computer with internet access and ability to read & write to a microSD card.
 
 :::
@@ -66,11 +66,13 @@ After you have installed the image, connecting the new Pioreactor to your cluste
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
-![](https://user-images.githubusercontent.com/884032/104632720-201a8e00-566c-11eb-9e80-6fb2346411c9.png)
+![Add new pioreactor](/img/user-guide/add_new_pioreactor.png)
 
 Provide the chosen hostname of the new worker Pioreactor:
 
-![](https://user-images.githubusercontent.com/884032/104633581-586e9c00-566d-11eb-9ea9-cffbf55d7303.png)
+![Add new pioreactor modal](/img/user-guide/add_new_pioreactor_modal.png)
+
+
 
 After a minute, the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up.
 
