--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -41,7 +41,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
     1. Set hostname as the desired name of this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
     2. Check "Enable SSH".
     3. Add username: `pioreactor` and password: `raspberry` (you can change the password later)
-    4. Check "Configure wireless LAN" and enter your network name into SSID, wifi password, and country. (Alternative: instead of trying to connect to a difficult network, like at a university that may not allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** The Pioreactor cannot connect to a 5Ghz wifi network.
+    4. Check "Configure wireless LAN" and enter your network name into SSID, wifi password, and country. (Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** Some Raspberry Pi's cannot connect to a 5Ghz wifi network - [see below for a list](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
     5. Change timezone to your local timezone.
     6. Click "Save"
 
