--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -151,3 +151,19 @@ Unfortunately, the microSD card becoming corrupted or damaged is an infrequent b
 - If the microSD card was inside a non-leader Pioreactor, it's best to try to reformat the microSD card and start fresh (i.e. [reinstall the Pioreactor software and reintroduce it to the cluster](/user-guide/software-set-up#adding-workers-to-your-cluster)). This is usually okay as no critical data is stored locally in workers, only log files and hardware calibrations will be lost.
 
 - If the microSD was inside the leader Raspberry Pi, this is a bigger problem. Likely any running experiment will have to be restarted. Fortunately, if you have more than one Pioreactor in your cluster, then the leader's SQLite database has been periodically backing itself up to other Pioreactors in the cluster every few days. Using the command line, check other Pioreactors' `/home/pioreactor/.pioreactor/storage` directory for the _latest_ backup named `pioreactor.sqlite.backup` (should be from within the past few days hours). You can use this database to restart a new leader.
+
+
+Networking
+---------------------------------
+
+#### Can I use Ethernet cable connections instead of WIFI connections?
+
+Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and WIFI is fine.
+
+
+#### I'm using a local access point, but I'd like to install plugins, update software, etc.
+
+##### To install a plugin
+
+On a computer that is connected to the internet, download the `.whl` file from the plugins webpage on PyPI. Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to install the plugin on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio install-plugin <plugin-name> <path/to/local/.whl>`
+
