--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -28,8 +28,13 @@ Before you get started, you'll need to have the following:
 
 We'll start with an unused Raspberry Pi and empty microSD card (or we'll reformat the card later if not empty).
 
-1. Download the [Pioreactor Leader image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_leader_worker.img.zip): this has all the required software preinstalled on it, including the latest version of Raspberry Pi OS and Pioreactor.
-2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it and open the Raspberry Pi Imager.
+1. Download the [Pioreactor Leader image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_leader_worker.img.zip).
+
+:::info
+What is an image? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
+:::
+
+2. To load the image onto your microSD card, download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and open the Raspberry Pi Imager.
 3.  Click "Choose OS". Click on "Use custom" towards the bottom:
     ![Select the "Use custom" option](/img/user-guide/use_custom_image.png)
     Select the downloaded Pioreactor image from step 1.
