rename silent, add more troublehsooting to software

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -124,6 +124,8 @@ Easiest solution is to start over: reflashing the OS onto the microSD card will 
 #### pioreactor.local in a web browser is not showing up
 
 *   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
+*   Try accessing using the url `http://<the permanent name of your Pioreactor aka hostname>.local`
+*   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`
+*   In your Raspberry Pi Imager settings, confirm that you clicked "Set username and password", and used the username `pioreactor`. If not, try [reinstalling the image](/user-guide/software-set-up#setting-up-your-raspberry-pi).
 *   Are you on an older Windows machine? You may need to install a DNS [service](https://learn.adafruit.com/bonjour-zeroconf-networking-for-windows-and-linux/overview#microsoft-windows-914263-8), but also see workarounds [here](https://github.com/OutsourcedGuru/octoprint-name-resolution-hacks).
-*   Try instead `http://<the permanent name of your Pioreactor aka hostname>.local`
-*   Still not working? Try instead `http://<IP address of your Raspberry Pi>`
+
