--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -35,38 +35,51 @@ What is an image? It's a file that contains all the required software preinstall
 :::
 
 2. To load the image onto your microSD card, download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and open the Raspberry Pi Imager.
-3.  Click "Choose OS". Click on "Use custom" towards the bottom:
+3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
+    ![Click "Choose OS"](/img/user-guide/choose-os.png)
     ![Select the "Use custom" option](/img/user-guide/use_custom_image.png)
     Select the downloaded Pioreactor image from step 1.
+	
     ![In the local computer's directory, select the downloaded image](/img/user-guide/select_new_image.png)
-4. Connect your microSD card to your computer. Once your microSD card connected to your computer, select it under "Choose Storage".
+4. Connect your microSD card to your computer. Once your microSD card connected to your computer, click **Choose Storage** and select it.
+    ![Click "Choose storage"](/img/user-guide/choose-storage.png)
 5. Click the settings menu (Gear button in the bottom right).
-  ![Settings menu](/img/user-guide/ctrlshiftx.png)
-
-    1. Set hostname as the desired name of this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
-    2. Check "Enable SSH".
-    3. Add username: `pioreactor` and password: `raspberry` (you can change the password later)
-    4. Check "Configure wireless LAN" and enter your network name into SSID, wifi password, and country. (Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** Some Raspberry Pi's cannot connect to a 5Ghz wifi network - [see below for a list](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
+	![Settings menu](/img/user-guide/rpi-click-settings.png)
+    1. Check **Set hostname**. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
+    2. Check **Enable SSH**, and **Use password authentication**.
+    3. Check **Set username and password**. Add **username**: `pioreactor` and **password**: `raspberry` (you can change the password later).
+    4. Check **Configure wireless LAN** and enter your network name into SSID, wifi password, and country.  
+	:::note
+	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** Some Raspberry Pi's cannot connect to a 5Ghz wifi network - [see below for a list](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
+	:::
+	
     5. Change timezone to your local timezone.
-    6. Click "Save"
 
-6.  Click "Write".
-7.  Once writing is complete complete, remove the microSD card, and place it into the Raspberry Pi.
-8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. After a few moments, your Pioreactor will briefly flash a blue LED, signifying it is ready. 
-9. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
+Your settings should look like this: 
+
+  ![Settings menu](/img/user-guide/rpi-imager-settings.png)
+
+6.  Click **Save**, then click **Write**.
+7.  Once writing is complete complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation. 
+
+	![Insert the micro SD card](/img/user-guide/place-micro-sd-card.png)
+8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. Your Pioreactor will briefly flash a blue LED, signifying it is ready. **This can take up to 3 minutes.**
+9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
 10. The Pioreactor is now ready for use! Basic experiment instructions can be found [here](/user-guide/prepare-vial-for-cultures). 
 
 ## Adding workers to your cluster
 
-#### From the Raspberry Pi Imager
+### From the Raspberry Pi Imager
 
 Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_worker.img.zip) instead. 
 
-**Note**: Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
+:::note 
+Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
+:::
 
 After you have installed the image, connecting the new Pioreactor to your cluster is simple. 
 
-#### From the web UI
+### From the web UI
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
