--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -69,7 +69,7 @@ Your settings should look like this:
 
 ## Adding workers to your cluster
 
-### From the Raspberry Pi Imager
+### 1. Install the worker software
 
 Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_worker.img.zip) instead. 
 
@@ -79,7 +79,7 @@ Choose a hostname that isn't currently being used in your cluster, ex: `worker1`
 
 After you have installed the image, connecting the new Pioreactor to your cluster is simple. 
 
-### From the web UI
+### 2. Add to cluster using the UI
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
