new config page

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -113,6 +113,10 @@ Probably. We haven't tested them, but so long as i) the GPIO pins are identical,
 
 We turn off the "activity" LED (usually the green one) to save some power for the Pioreactor's peripherals. We do the same for USB and Ethernet. You can turn these back on by editing the `/boot/config.txt` file on the RPi.
 
+#### What is the username / password for the Raspberry Pi?
+
+When setting up your Raspberry Pi with the Pioreactor software, you would have chosen a password. Try the recommended username: `pioreactor`, and password: `raspberry`.
+
 
 Dosing
 ------------------------
