--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -12,7 +12,7 @@ Pioreactor operation
 
 #### Why does the onboard blue LED keep flashing?
 
-There may be a problem. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes)
+There may be a problem. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes).
 
 #### What does the onboard button do?
 
@@ -70,11 +70,11 @@ Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair
 
 If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, (in increasing order of complication, not necessarily effectiveness):
 
-0. If the tubes in the cap are submerged during operation, this is reduce the transfer of air. Pull them up from the top of the cap to keep them out of the liquid.
-1. Leave the cap slightly ajar.
-2. Increase the RPM of the stirring. This will increase the surface area exposed to the air. Be warned though: too high of an RPM will cause either a large enough vortex to interfere with the optical systems, or will causing the stir bar to fall out of sync.
-3. Add a baffle to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
-4. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
+1. If the tubes in the cap are submerged during operation, this is reduce the transfer of air. Pull them up from the top of the cap to keep them out of the liquid.
+2. Leave the cap slightly ajar.
+3. Increase the RPM of the stirring. This will increase the surface area exposed to the air. Be warned though: too high of an RPM will cause either a large enough vortex to interfere with the optical systems, or will causing the stir bar to fall out of sync.
+4. Add a baffle to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
+5. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
 
 
 
@@ -113,7 +113,7 @@ Probably. We haven't tested them, but so long as i) the GPIO pins are identical,
 
 We turn off the "activity" LED (usually the green one) to save some power for the Pioreactor's peripherals. We do the same for USB and Ethernet. You can turn these back on by editing the `/boot/config.txt` file on the RPi.
 
-#### What is the username / password for the Raspberry Pi?
+#### What is the username/password for the Raspberry Pi?
 
 When setting up your Raspberry Pi with the Pioreactor software, you would have chosen a password. Try the recommended username: `pioreactor`, and password: `raspberry`.
 
