--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -28,7 +28,7 @@ Before you get started, you'll need to have the following:
 
 We'll start with an unused Raspberry Pi and empty microSD card (or we'll reformat the card later if not empty).
 
-1. Download the [Pioreactor Leader image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_leader_worker.img.zip).
+1. Download the [Pioreactor Leader image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
 :::info
 What is an image? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
@@ -71,7 +71,7 @@ Your settings should look like this:
 
 ### 1. Install the worker software
 
-Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/pioreactor/releases/latest/download/pioreactor_worker.img.zip) instead. 
+Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
 
 :::note 
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
