--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -28,10 +28,10 @@ Before you get started, you'll need to have the following:
 
 We'll start with an unused Raspberry Pi and empty microSD card (or we'll reformat the card later if not empty).
 
-1. Download the [Pioreactor Leader image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
+1. Download the [Pioreactor Leader/Worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
 :::info
-What is an image? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
+What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
 :::
 
 2. To load the image onto your microSD card, download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and open the Raspberry Pi Imager.
