--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -123,7 +123,7 @@ Easiest solution is to start over: reflashing the OS onto the microSD card will 
 
 #### pioreactor.local in a web browser is not showing up
 
-*   In your browser's address bad, add the `http://` infront of the url, like so: `http://pioreactor.local`.
+*   In your browser's address bar, add the `http://` infront of the url, like so: `http://pioreactor.local`.
 *   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
 *   Try accessing using the url `http://<the permanent name of your Pioreactor aka hostname>.local`
 *   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`
