--- a/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
@@ -15,15 +15,15 @@ From your Pioreactor's interface, the "Plugins" button on the left navigation ba
 
 ![plugin page](https://cdn.shopify.com/s/files/1/0515/1824/3002/files/Screen_Shot_2021-06-14_at_1.40.20_PM.png?v=1623692457)
 
-### Custom automations
+### Automations installed via plugins
 
-After installation, custom dosing, LED, or temperature automations will be available in the automation modal under the "Settings" tab in each Pioreactor's Manage modal.
+After installation, dosing, LED, or temperature automations will be available in the automation modal under the "Settings" tab in each Pioreactor's Manage modal.
 
 ![](https://cdn.shopify.com/s/files/1/0515/1824/3002/files/Screen_Shot_2021-05-31_at_3.20.08_PM.png?v=1622488873)![](https://cdn.shopify.com/s/files/1/0515/1824/3002/files/Screen_Shot_2021-05-31_at_3.20.13_PM.png?v=1622488848)
 
-### Custom activities
+### Activities installed via plugins
 
-After installation, a custom activity's state and settings will show up on each Pioreactor's card. Below, we've installed the pioreactor-air-bubbler plugin:
+After installation, a activity's state and settings will show up on each Pioreactor's card. Below, we've installed the pioreactor-air-bubbler plugin:
 
 ![](https://cdn.shopify.com/s/files/1/0515/1824/3002/files/Screen_Shot_2021-05-31_at_3.25.22_PM.png?v=1622489169)
 
@@ -35,4 +35,4 @@ Managing on/off and settings are done just like any other job, in the Manage mod
 
 ## Alternative: putting Python files in the the `plugins` folder
 
-An alternative way to install a plugin is to place a Python file in the `/home/pioreactor/.pioreactor/plugins` directory on the Raspberry Pi. This is good for one-off scripts or plugins you are demoing or testing.
+An alternative way to install a plugin is to place a Python file in the `/home/pioreactor/.pioreactor/plugins` directory on the Raspberry Pi. This is good for one-off scripts or plugins you are demoing or testing. See more [about writing and distributing plugins](https://docs.pioreactor.com/developer-guide/intro-plugins).
