--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -48,9 +48,9 @@ What is an image file? It's a file that contains all the required software prein
     1. Check **Set hostname**. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
     2. Check **Enable SSH**, and **Use password authentication**.
     3. Check **Set username and password**. Add **username**: `pioreactor` and **password**: `raspberry` (you can change the password later).
-    4. Check **Configure wireless LAN** and enter your network name into SSID, wifi password, and country.  
+    4. Check **Configure wireless LAN** and enter your network name into SSID, wifi password, and country.
 	:::note
-	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [here's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** Some Raspberry Pi's cannot connect to a 5Ghz wifi network - [see below for a list](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
+	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)). You can lave this box unchecked. **Note:** [See below for a list for usable Raspberry Pis](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
 	:::
 	
     5. Change timezone to your local timezone.
