--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -50,7 +50,7 @@ What is an image file? It's a file that contains all the required software prein
     3. Check **Set username and password**. Add **username**: `pioreactor` and **password**: `raspberry` (you can change the password later).
     4. Check **Configure wireless LAN** and enter your network name into SSID, wifi password, and country.
 	:::note
-	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)). You can lave this box unchecked. **Note:** [See below for a list for usable Raspberry Pis](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
+	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** [See below for a list for usable Raspberry Pis](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
 	:::
 	
     5. Change timezone to your local timezone.
