--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -28,13 +28,14 @@ Before you get started, you'll need to have the following:
 
 We'll start with an unused Raspberry Pi and empty microSD card (or we'll reformat the card later if not empty).
 
-1. Download the [Pioreactor Leader/Worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
+1. Download the [Pioreactor leader & worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
 :::info
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
 :::
 
-2. To load the image onto your microSD card, download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and open the Raspberry Pi Imager.
+2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and
+3.  Open the newly-installed Raspberry Pi Imager.
 3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
     ![Click "Choose OS"](/img/user-guide/choose-os.png)
     ![Select the "Use custom" option](/img/user-guide/use_custom_image.png)
@@ -50,7 +51,7 @@ What is an image file? It's a file that contains all the required software prein
     3. Check **Set username and password**. Add **username**: `pioreactor` and **password**: `raspberry` (you can change the password later).
     4. Check **Configure wireless LAN** and enter your network name into SSID, wifi password, and country.
 	:::note
-	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)). **Note:** [See below for a list for usable Raspberry Pis](/user-guide/software-set-up#my-rpi-wont-connect-to-my-wifi).
+	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
 	:::
 	
     5. Change timezone to your local timezone.
@@ -59,13 +60,14 @@ Your settings should look like this:
 
   ![Settings menu](/img/user-guide/rpi-imager-settings.png)
 
-6.  Click **Save**, then click **Write**.
+6.  Click **Save**.
+8.  Click **Write**. Writing will take up to 5 minutes.
 7.  Once writing is complete complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation. 
 
-	![Insert the micro SD card](/img/user-guide/place-micro-sd-card.png)
+	![Insert the microSD card](/img/user-guide/place-micro-sd-card.png)
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. Your Pioreactor will briefly flash a blue LED, signifying it is ready. **This can take up to 3 minutes.**
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
-10. The Pioreactor is now ready for use! Basic experiment instructions can be found [here](/user-guide/prepare-vial-for-cultures). 
+10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to setting up your first experiment.
 
 ## Adding workers to your cluster
 
@@ -108,7 +110,7 @@ On a successful start, the Pioreactor will flash its blue LED for about 4 second
 
 
 
-#### My Rpi won't connect to my Wifi.
+#### My RPi won't connect to my Wifi.
 
 *   If you are on a restrictive WiFi network (like at a university), and wish to avoid the network, [creating a local access point](/user-guide/local-access-point) may be a better option.
 *   Some Raspberry Pis can't connect to Wifi natively, and some Raspberry Pis can only connect to 2.4GHz connections. See table below: [![Rpi and wifi](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)[](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)
